corrects output alignment. removes css p

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,6 @@ body {
 }
 
 p {
-  text-align: center;
 }
 
 .container {
@@ -36,11 +35,13 @@ p {
 #output {
   display: none;
   margin: auto;
-  width: 20%;
+  width: 50%;
+  text-align: center;
 }
 
 img {
   max-height: 180px;
+  
 }
 
 .hidden {
